# stockfish

./: .gitignore  Cargo.toml  README.md
examples/: demo.rs  demo2.rs  demo3.rs
src/: engine_eval.rs  engine_output.rs  lib.rs  stockfish.rs
