[package]
name = "stockfish"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
license-file = "LICENSE"
description = "A Rust library for interacting with a running Stockfish process"
homepage = "https://github.com/AlanYChen/stockfish"
repository = "https://github.com/AlanYChen/stockfish"
readme = "README"
keywords = ["stockfish", "chess", "uci", "process", "engine"]
categories = ["games"]

[dependencies]
interactive_process = "0.1.3"
serde = "1.0.219"