[package]
name = "stockfish"
version = "0.2.9"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Light, easy-to-use wrapper for the Stockfish engine" 
repository = "https://github.com/AlanYChen/stockfish"
documentation = "https://docs.rs/stockfish"
readme = "README.md"
keywords = ["chess", "engine", "stockfish"]

[dependencies]
interactive_process = "0.1.3"